<resources>
    <string name="app_name">VibFinder</string>

    <string name="title_activity_vib_finder">VibFinder</string>
    <string name="stopVibration">Stop Vibration</string>
    <string name="startSearch">Start Search</string>
    <string name="stopSearch">Stop Search</string>
    <string name="bluetooth_disabled">Bluetooth adapter is disabled.</string>
    <string name="enabling_bluetooth">Enabling bluetooth adapter…</string>
    <string name="enable_button">ENABLE</string>
    <string name="press_back_again_to_exit">Press back again to STOP the search and exit.</string>
    <string name="device_name">Device name</string>
    <string name="last_seen">Last seen</string>
    <string name="alert_enabled">Alert</string>

    <string name="preferences_vib_finder_service" translatable="false">com.pexel.vibfinder.preferences_vib_finder_service</string>
    <string name="preference_search_enabled" translatable="false">com.pexel.vibfinder.preference_search_running</string>

    <string name="start_mode_autostart" translatable="false">autostart</string>
    <string name="start_mode_user" translatable="false">user</string>

    <!-- Menu items -->
    <string name="menu_exit">Exit</string>
    <string name="time_zero" translatable="false">00:00</string>
    <string name="location_permission_explanation">Please allow us to access you location. We need this to scan for Bluetooth devices.\nWe won\'t save your location data or transmit them without your explicit consent.</string>
    <string name="update_announcement_text">There is a new update available. Please visit https://github.com/realpexel/VibFinder/releases and download the newest version.</string>
    <string name="report_device_title">Report device?</string>
    <string name="report_device_text">Are you sure you want to report that device as a wrong match?</string>
    <string name="report_device_successfull">Report sucessfull</string>
    <string name="report_device_failed">Report failed</string>
</resources>
