<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vib_finder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pr0gramm.donation.vib_finder.VibFinderActivity">

    <LinearLayout
        android:id="@+id/layout_enable_bluetooth"
        android:visibility="visible"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/ble_disabled_color"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ble_status_text_view"
            android:textColor="@color/ble_enable_text_color"
            android:textStyle="bold"
            android:textSize="8pt"
            android:paddingLeft="8dip"
            android:text="@string/bluetooth_disabled"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ble_enable_button"
            android:textSize="8pt"
            android:textStyle="bold"
            android:textColor="@color/ble_enable_text_color"
            android:background="#0000"
            android:text="@string/enable_button"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <Button
            android:text="@string/startSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startStopButton" />
        <Button
            android:text="@string/stopVibration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/stopVibrationButton"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:orientation="horizontal"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/device_name"
                android:textSize="8pt"
                android:textColor="#000000"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_seen"
                android:textSize="8pt"
                android:textColor="#000000"
                android:textAlignment="textEnd"
                android:paddingRight="10dip"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_enabled"
                android:textSize="8pt"
                android:textColor="#000000"
                android:textAlignment="textEnd"
                android:paddingRight="15dip"
                />

        </LinearLayout>

        <ListView
            android:id="@+id/vibrators_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:paddingBottom="20dip"
            />
    </LinearLayout>
</LinearLayout>
